# weathercli

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.claude/: settings.local.json
src/weather/: __init__.py  base_service.py  cli.py  config.py  constants.py  errors.py  location.py  location_resolver.py  logging_config.py  service.py  types.py  weather_art.py
tests/: test_cli.py  test_config.py  test_location.py  test_service.py  test_weather_art.py
