[tool.poetry]
name = "weather"
version = "0.1.0"
description = "A Python weather application"
authors = ["User <user@example.com>"]
readme = "README.md"
packages = [{include = "weather", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
click = "^8.2.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.0"
types-requests = "^2.32.4.20250611"
types-pyyaml = "^6.0.12.20250516"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weather = "weather.cli:main"